// btree index package for btree index module 2023-06-10 
// created by myjang@etri.re.kr
// Update 2023-07-03

syntax = "proto3";

package idxmngrapi;
option go_package = "idxmngr-go/mngrapi"; // *.pb.go file create directory 

service Index_manager{
  //for index server
  rpc CreateIndexRequest(IndexInfo) returns (IdxMngrResponse);
  rpc UpdateIndexRequest(IndexInfo) returns (IdxMngrResponse);
  rpc InsertIndexRequest(stream InsertDatatoIdx) returns (IdxMngrResponse);
  rpc GetindexDataByFieldM(SearchRequestM) returns (RstTxListM);

  //for idxmngr
  rpc GetIndexInfo(IndexInfo) returns (IdxMngrResponse);  //index 유무 확인 0516, query=(column명, key) index 매니저질의 vs grpc질의 여부 확인
  rpc GetIndexList(IndexInfoRequest) returns (IndexList); //index list 반환
  rpc GetQueryInfo(QueryRequest) returns (QueryInfo);
}

enum ComparisonOps {
	Eq              = 0;
	NotEq           = 1;
	Less            = 2;
	LessThanEq      = 3;
	Greater         = 4;
	GreaterThanEq   = 5;
	Range           = 6;
  Knn             = 7;
} 

message QueryCallHist{ 
  ComparisonOps	ComOp   = 1;
  int32 RstCnt         = 2;
}

//CreateIndex, GetIndexInfo
message IndexInfo{      
  string    IndexID       = 1;
  string    IndexName     = 2;
  string    KeyCol        = 3;
  string    FilePath      = 4;  //file index storage FilePath
  int32     KeySize       = 5;  //file index key size (byte)
  int32     BlockNum      = 6;
  int32     CallCnt       = 7;
  int32     KeyCnt        = 8;
  int32     IndexDataCnt  = 9;  // (IndexDataCnt/KeyCnt) = key duplication ratio
  string    Param         = 10;
  repeated  QueryCallHist QCnt = 11;
}

//GetIndexList
message IndexInfoRequest{     //updated(1004)
  string    RequestMsg  = 1;  //message for index list
  string    KeyCol  = 2;
  string    Param   = 3;
}

message IndexList{
  int32 IndexCnt   = 1;
  repeated IndexInfo IdxList = 2;
}

message BcData_list {
  string              TxId   		= 1;
  string              key_col   = 2; 
  PvdHistDataM        Pvd   		= 3; 
  IndexableDataM      IndexableData = 4;  // 범용 데이터
	IdxMngrResponse     Response 	= 5;
}

message InsertDatatoIdx{
	string                IndexID   = 1;
	repeated BcData_list  BcList    = 2;  //updated(1004)
	IdxMngrResponse       Response  = 3;
  string                ColName   = 4;
  float   x           = 5;
  float   y           = 6;
  uint32  GeoHash     = 7;
  string  TxId        = 8;
  uint64  time        = 9;
  string  FilePath    = 10;  //file index storage FilePath
  int32   BlockNum    = 11;
}

message IdxMngrResponse {
	int32	  ResponseCode      = 1;	// if 200 OK else Error 
	string	ResponseMessage   = 2;
	int64 	Duration          = 3;	// NanoSeconds
	string 	IndexID           = 4;
  IndexInfo IndexStatus     = 5;  //updated(1004)
}

message SearchRequestM{
	string			IndexID   = 1;	//index id = used as a key
	string			Key       = 2;
	string			TxId      = 3;
	string			Field     = 4;
	string			Value     = 5;
	string			Begin     = 6;
	string			End       = 7;
	ComparisonOps	ComOp   = 8;
  float       x       = 9;
  float       y       = 10;
  int32       k       = 11;
  float       range   = 12;
  string      FilePath      = 13;  //file index storage FilePath
  int32       KeySize       = 14;
}
message IndexValue{         //updated(1004)
  string    TxId  = 1;
}

message RstTxListM{
	IndexInfo           idxInfo = 1;
	string              Key     = 2;
	repeated string IdxData = 3;    //updated(1004)
}

message QueryRequest{   //updated(1004)
  ComparisonOps ComOp = 1;
}

message QueryInfo{      //updated(1004)
  ComparisonOps	ComOp  = 1;
  int32 RstSize        = 2;
  int64 RunTime        = 3;
  int32 RstMin         = 4;
  int32 RstMax         = 5;
  int32 RstMean        = 6;
}

message PvdHistDataM {
  string Collection_dt          = 1;
  string Startvector_latitude   = 2;
  string Startvector_longitude  = 3;
  string Transmisstion          = 4;
  int32  Speed                  = 5;
  string Hazard_lights          = 6;
  string Left_turn_signal_on    = 7;
  string Right_turn_signal_on   = 8;
  int32  Steering               = 9;
  int32  Rpm                    = 10;
  string Footbrake              = 11;
  string Gear                   = 12;
  int32  Accelator              = 13;
  string Wipers                 = 14;
  string Tire_warn_left_f       = 15;
  string Tire_warn_left_r       = 16;
  string Tire_warn_right_f      = 17;
  string Tire_warn_right_r      = 18;
  int32  Tire_psi_left_f        = 19;
  int32  Tire_psi_left_r        = 20;
  int32  Tire_psi_right_f       = 21;
  int32  Tire_psi_right_r       = 22;
  int32  Fuel_percent           = 23;
  int32  Fuel_liter             = 24;
  int32  Totaldist              = 25;
  string Rsu_id                 = 26;
  string Msg_id                 = 27;
  int32  Startvector_heading    = 28;
  string Address                = 29;
  string OrganizationName       = 30;  // 추가
}

// 범용적인 인덱싱 가능한 데이터 구조 (정리됨)
message IndexableDataM {
     // 인덱싱에 실제로 사용되는 key
     string OrganizationName       = 1;  // 조직명 (삼성전자, LG전자 등)
}                                  


